# ai-detect

./: .gitignore  README.md  pyproject.toml
src/ai_detect/: __init__.py  cli.py  consensus.py  models.py  segment.py
